<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/DifferentBarChartOptions"
    android:layout_width="match_parent"
    android:layout_height="32sp">


    <androidx.cardview.widget.CardView
        android:id="@+id/RecoveredCV"
        android:layout_width="100sp"
        android:layout_height="32sp"
        android:layout_margin="2sp"
        android:layout_toStartOf="@id/DeathsCV"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#8AcA2B"
        app:cardCornerRadius="5sp"
        app:cardElevation="10sp">

        <TextView
            android:id="@+id/CvRecoverdTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="4sp"
            android:text="@string/recoveredd"
            android:textAllCaps="true"
            android:textColor="#FFF" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/DeathsCV"
        android:layout_width="100sp"
        android:layout_height="32sp"
        android:layout_centerInParent="true"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#FA0000"
        app:cardCornerRadius="5sp"
        app:cardElevation="10sp">

        <TextView
            android:id="@+id/CvDeathsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="4sp"
            android:text="@string/deathss"
            android:textAllCaps="true"
            android:textColor="#FFF" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/MixedCV"
        android:layout_width="100sp"
        android:layout_height="32sp"
        android:layout_margin="2sp"
        android:layout_toEndOf="@id/DeathsCV"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#DAAD53"
        app:cardCornerRadius="5sp"

        app:cardElevation="10sp">

        <TextView
            android:id="@+id/CvMixedTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="4sp"
            android:text="@string/confirmedd"
            android:textAllCaps="true"
            android:textColor="#FFF" />

    </androidx.cardview.widget.CardView>


</RelativeLayout>