<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/IndiaCardViewModel"
    android:layout_width="match_parent"
    android:layout_height="125sp"
    android:layout_margin="7sp"
    android:clickable="true"
    android:elevation="6sp"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    app:cardCornerRadius="6sp"
    app:cardElevation="8sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/IndiaCountHomeProgressBar"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="invisible" />


        <TextView
            android:id="@+id/Info1tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/india_case_count"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/Blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/CardViewRL"
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:layout_below="@id/Info1tv">


            <androidx.cardview.widget.CardView
                android:id="@+id/ConfirmedCvv"
                android:layout_width="110sp"
                android:layout_height="70sp"
                android:layout_margin="2sp"
                android:layout_toStartOf="@id/RecoveredCvv"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/Orange"
                app:cardCornerRadius="5sp"
                app:cardElevation="10sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ConfirmCases1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="7sp"
                        android:text="@string/confirmedd"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="#FFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/IndiaTotalCasesTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ConfirmCases1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10sp"
                        android:text="@string/_999999"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="#FFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/RecoveredCvv"
                android:layout_width="110sp"
                android:layout_height="70sp"
                android:layout_centerInParent="true"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/Green"
                app:cardCornerRadius="5sp"
                app:cardElevation="10sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8sp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/RecoveredCases1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="7sp"
                        android:text="@string/recoveredd"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="#FFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/IndiaTotalRecoveredTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/RecoveredCases1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10sp"
                        android:text="@string/_999999"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="#FFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/DeathsCv"
                android:layout_width="110sp"
                android:layout_height="70sp"
                android:layout_margin="2sp"
                android:layout_toEndOf="@id/RecoveredCvv"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/Red"
                app:cardCornerRadius="5sp"
                app:cardElevation="10sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6sp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/DeathCases1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10sp"
                        android:text="@string/deathss"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="#FFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/IndiaTotalDeathTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/DeathCases1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10sp"
                        android:text="@string/_999999"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="#FFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

        </RelativeLayout>


        <TextView
            android:id="@+id/LastUpdateTimeIndia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CardViewRL"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3sp"
            android:layout_marginBottom="2sp"
            android:paddingStart="15sp"
            android:text="@string/lastupdated"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#47B1F3"
            android:textSize="12sp" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>